@@ -12,9 +12,9 @@ import org.junit.jupiter.params.provider.ValueSource;
 import org.opentripplanner.ConstantsForTests;
 import org.opentripplanner.TestOtpModel;
 import org.opentripplanner.astar.model.GraphPath;
+import org.opentripplanner.graph_builder.module.linking.TestVertexLinker;
 import org.opentripplanner.model.GenericLocation;
 import org.opentripplanner.routing.api.request.RouteRequest;
-import org.opentripplanner.routing.api.request.StreetMode;
 import org.opentripplanner.routing.graph.Graph;
 import org.opentripplanner.routing.impl.GraphPathFinder;
 import org.opentripplanner.street.model.edge.Edge;
@@ -35,7 +35,7 @@ class WalkRoutingTest {
     roundabout = model.graph();
 
     model.timetableRepository().index();
-    roundabout.index(model.timetableRepository().getSiteRepository());
+    roundabout.index();
   }
 
   /**
@@ -48,27 +48,36 @@ class WalkRoutingTest {
    */
   @Test
   void shouldRouteAroundRoundabout() {
-    var start = new GenericLocation(59.94646, 10.77511);
-    var end = new GenericLocation(59.94641, 10.77522);
+    var start = GenericLocation.fromCoordinate(59.94646, 10.77511);
+    var end = GenericLocation.fromCoordinate(59.94641, 10.77522);
     assertDoesNotThrow(() -> route(roundabout, start, end, dateTime, false));
   }
 
   @ParameterizedTest
   @ValueSource(ints = { 0, 200, 400, 499, 500, 501, 600, 700, 800, 900, 999 })
   void pathReversalWorks(int offset) {
-    var start = new GenericLocation(59.94646, 10.77511);
-    var end = new GenericLocation(59.94641, 10.77522);
+    var start = GenericLocation.fromCoordinate(59.94646, 10.77511);
+    var end = GenericLocation.fromCoordinate(59.94641, 10.77522);
     var base = dateTime.truncatedTo(ChronoUnit.SECONDS);
     var time = base.plusMillis(offset);
-    var results = route(roundabout, start, end, time, true);
-    assertEquals(1, results.size());
-    var states = results.get(0).states;
-    var diff = ChronoUnit.MILLIS.between(
-      states.getFirst().getTimeAccurate(),
-      states.getLast().getTimeAccurate()
+    var forwardResults = route(roundabout, start, end, time, false);
+    assertEquals(1, forwardResults.size());
+    var forwardStates = forwardResults.getFirst().states;
+    var forwardDiff = ChronoUnit.MILLIS.between(
+      forwardStates.getFirst().getTimeAccurate(),
+      forwardStates.getLast().getTimeAccurate()
+    );
+    var backwardResults = route(roundabout, start, end, time, true);
+    assertEquals(1, backwardResults.size());
+    var backwardStates = forwardResults.getFirst().states;
+    var backwardDiff = ChronoUnit.MILLIS.between(
+      backwardStates.getFirst().getTimeAccurate(),
+      backwardStates.getLast().getTimeAccurate()
     );
     // should be same for every parametrized offset, otherwise irrelevant
-    assertEquals(13926, diff);
+    int expected = 10430;
+    assertEquals(expected, forwardDiff);
+    assertEquals(expected, backwardDiff);
   }
 
   private static List<GraphPath<State, Edge, Vertex>> route(
@@ -78,16 +87,17 @@ class WalkRoutingTest {
     Instant instant,
     boolean arriveBy
   ) {
-    RouteRequest request = new RouteRequest();
-    request.setDateTime(instant);
-    request.setFrom(from);
-    request.setTo(to);
-    request.setArriveBy(arriveBy);
-    request.journey().direct().setMode(StreetMode.WALK);
+    RouteRequest request = RouteRequest.of()
+      .withDateTime(instant)
+      .withFrom(from)
+      .withTo(to)
+      .withArriveBy(arriveBy)
+      .buildRequest();
 
     try (
       var temporaryVertices = new TemporaryVerticesContainer(
         graph,
+        TestVertexLinker.of(graph),
         request.from(),
         request.to(),
         request.journey().direct().mode(),
